lab10_ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
  namespace: admin-ns
spec:
  selector:
    app: admin-dashboard
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
